--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@sendgrid/mail": "^7.7.0",
+    "@sendgrid/mail": "^8.1.0",
     "@stripe/react-stripe-js": "^1.14.1",
     "@stripe/stripe-js": "^1.42.1",
     "base-64": "^1.0.0",
@@ -35,7 +35,8 @@
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "router": "^1.3.7",
-    "sharp": "^0.31.2",
+    "sanitize-filename": "^1.6.3",
+    "sharp": "^0.33.2",
     "stripe": "^10.15.0",
     "swr": "^1.3.0",
     "watch": "^1.0.2",
