--- a/package.json
+++ b/package.json
@@ -10,54 +10,57 @@
     "watch": "npm-watch"
   },
   "dependencies": {
-    "@fontsource/source-code-pro": "^4.5.12",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@sendgrid/mail": "^8.1.0",
-    "@stripe/react-stripe-js": "^1.14.1",
-    "@stripe/stripe-js": "^1.42.1",
+    "@fontsource/source-code-pro": "^5.0.18",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@sendgrid/mail": "^8.1.3",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
+    "@types/escape-html": "^1.0.4",
     "base-64": "^1.0.0",
-    "bootstrap": "^5.2.2",
-    "dotenv": "^16.0.3",
+    "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "escape-html": "^1.0.3",
     "exclude": "^1.0.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
-    "micro": "^9.4.1",
+    "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
-    "next": "^13.0.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.1",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-modal": "^3.16.1",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
-    "router": "^1.3.7",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "router": "^1.3.8",
     "sanitize-filename": "^1.6.3",
-    "sharp": "^0.33.2",
-    "stripe": "^10.15.0",
-    "swr": "^1.3.0",
-    "watch": "^1.0.2",
-    "wicg-inert": "^3.1.2"
+    "sharp": "^0.33.4",
+    "stripe": "^15.9.0",
+    "swr": "^2.2.5",
+    "watch": "^0.13.0",
+    "wicg-inert": "^3.1.2",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.7",
-    "@types/base-64": "^1.0.0",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@types/react-modal": "^3.13.1",
-    "autoprefixer": "^10.4.13",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/base-64": "^1.0.2",
+    "@types/node": "20.14.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.1",
-    "npm-watch": "^0.11.0",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
+    "eslint-config-next": "14.2.3",
+    "npm-watch": "^0.13.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.1.6"
   },
   "watch": {
     "build": {
